[package]
name = "merenga"
description = "Metric router and aggregator for carbon protocol"
version = "0.1.0"
authors = ["Sergey Noskov <snoskov@avito.ru>"]
edition = "2018"

[dependencies]
thiserror = "^1.0"
clap="^2.31"

bioyino-metric = { path = "/home/albibek/projects/rust/bioyino-metric" }

log="^0.4"
slog="^2.4"
slog-term="^2.4"
slog-async="^2.3"
slog-scope="^4.3"
slog-stdlog="^4.0"

futures = "^0.3"
bytes = { version = "^0.5", features = [ "serde" ] }
tokio = { version = "^0.2", features = ["net", "time", "sync", "macros", "io-util", "io-driver", "rt-core", "rt-threaded", "blocking", "signal"] }
tokio-util = { version = "^0.2", features = ["codec"] }
trust-dns-resolver = { version = "^0.19" }

ring-channel = {version = "^0.8", features = ["futures_api"]}

serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.8"

regex = "^1.1"

#nom = "^5.0"
#combine="^3.8"

ftoa = "^0.1"
itoa = "^0.4"
once_cell = "^1.3"

[build-dependencies]
vergen = "3"
